[gd_scene load_steps=20 format=3 uid="uid://cqxiwi5803jvr"]

[ext_resource type="Script" path="res://scripts/quiz_manager.gd" id="1_wr7b0"]
[ext_resource type="Texture2D" uid="uid://drg0a1hs0xos5" path="res://assets/tileset_desert_8x8.png" id="3_4aij5"]
[ext_resource type="PackedScene" uid="uid://r5fv5ts23nsv" path="res://scenes/killzone.tscn" id="4_uafcj"]
[ext_resource type="PackedScene" uid="uid://bipel30x7imk8" path="res://scenes/timer.tscn" id="6_06lwn"]
[ext_resource type="Texture2D" uid="uid://thqle27188yk" path="res://assets/single_shark.png" id="6_f6x2s"]
[ext_resource type="Script" path="res://scripts/character_body_2d.gd" id="6_v68fg"]
[ext_resource type="Texture2D" uid="uid://c7cmldv47ualc" path="res://assets/single_fish.png" id="7_1x8mv"]
[ext_resource type="PackedScene" uid="uid://6f8cxsgodnkq" path="res://scenes/pause_button.tscn" id="7_66u4o"]
[ext_resource type="Texture2D" uid="uid://c56nngih3ortw" path="res://assets/single_penguin.png" id="8_4dniu"]
[ext_resource type="Texture2D" uid="uid://cdr24aa7lesc0" path="res://assets/single_chicken.png" id="9_3h7xv"]

[sub_resource type="GDScript" id="GDScript_6ayin"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xt1vw"]
size = Vector2(20, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ie44a"]
size = Vector2(20, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6devd"]
size = Vector2(20, 67)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0tkqw"]
size = Vector2(20, 81)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_itnyd"]
texture = ExtResource("3_4aij5")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, 8, 0.25, 8, 8, -8, 8)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, 8, 0.25, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_sas6p"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_itnyd")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_2axdh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ulaet"]

[node name="Node2D" type="Node2D"]

[node name="Quiz Manager" type="Node" parent="."]
script = ExtResource("1_wr7b0")

[node name="Question" type="Label" parent="Quiz Manager"]
offset_left = -285.0
offset_top = -162.0
offset_right = 93.0
offset_bottom = -139.0
text = "Question: "

[node name="AnswerA" type="Area2D" parent="Quiz Manager"]
position = Vector2(1, 0)
collision_layer = 2
script = SubResource("GDScript_6ayin")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quiz Manager/AnswerA"]
position = Vector2(298, -128)
shape = SubResource("RectangleShape2D_xt1vw")

[node name="AnswerB" type="Area2D" parent="Quiz Manager"]
position = Vector2(1, 0)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quiz Manager/AnswerB"]
position = Vector2(298, -46)
shape = SubResource("RectangleShape2D_ie44a")

[node name="AnswerC" type="Area2D" parent="Quiz Manager"]
position = Vector2(253, 57)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quiz Manager/AnswerC"]
position = Vector2(46, -23)
shape = SubResource("RectangleShape2D_6devd")

[node name="AnswerD" type="Area2D" parent="Quiz Manager"]
position = Vector2(277, 142)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quiz Manager/AnswerD"]
position = Vector2(22, -20)
shape = SubResource("RectangleShape2D_0tkqw")

[node name="A" type="Label" parent="Quiz Manager"]
offset_left = 57.0
offset_top = -112.0
offset_right = 97.0
offset_bottom = -89.0
text = "A. "

[node name="B" type="Label" parent="Quiz Manager"]
offset_left = 57.0
offset_top = -46.0
offset_right = 97.0
offset_bottom = -23.0
text = "B."

[node name="C" type="Label" parent="Quiz Manager"]
offset_left = 57.0
offset_top = 46.0
offset_right = 97.0
offset_bottom = 69.0
text = "C."

[node name="D" type="Label" parent="Quiz Manager"]
offset_left = 57.0
offset_top = 122.0
offset_right = 97.0
offset_bottom = 145.0
text = "D."

[node name="Score" type="Label" parent="Quiz Manager"]
offset_left = -286.0
offset_top = -128.0
offset_right = -246.0
offset_bottom = -105.0
text = "Score:"

[node name="AnswerChecker" type="Label" parent="Quiz Manager"]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="Timer" type="Timer" parent="Quiz Manager"]

[node name="DeathMessage" type="Label" parent="Quiz Manager"]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(1, 0)
tile_set = SubResource("TileSet_sas6p")
format = 2
layer_0/tile_data = PackedInt32Array(-65519, 262144, 1, 262161, 262144, 1, 589841, 262144, 1, -393199, 262144, 1, -393204, 262144, 1, -393209, 262144, 1, -393210, 262144, 1, -393215, 262144, 1, -327681, 262144, 1, -393216, 262144, 1, -327686, 262144, 1, -327687, 262144, 1, -327688, 262144, 1, -327689, 262144, 1, -327694, 262144, 1, -327695, 262144, 1, -327697, 262144, 1, -327696, 262144, 1, -327698, 262144, 1, -65524, 262144, 1, 262156, 262144, 1, 589836, 262144, 1, -65529, 262144, 1, -65530, 262144, 1, -65535, 262144, 1, -65536, 262144, 1, -1, 262144, 1, -9, 262144, 1, -7, 262144, 1, -6, 262144, 1, -8, 262144, 1, -14, 262144, 1, -15, 262144, 1, -16, 262144, 1, -17, 262144, 1, -18, 262144, 1, 262151, 262144, 1, 262150, 262144, 1, 262145, 262144, 1, 262144, 262144, 1, 327679, 262144, 1, 327674, 262144, 1, 327673, 262144, 1, 327672, 262144, 1, 327671, 262144, 1, 327666, 262144, 1, 327665, 262144, 1, 327663, 262144, 1, 327662, 262144, 1, 327664, 262144, 1, 655342, 262144, 1, 655343, 262144, 1, 655344, 262144, 1, 655345, 262144, 1, 655346, 262144, 1, 655351, 262144, 1, 655352, 262144, 1, 655353, 262144, 1, 655354, 262144, 1, 655359, 262144, 1, 589824, 262144, 1, 589825, 262144, 1, 589830, 262144, 1, 589831, 262144, 1)

[node name="Killzone" parent="." instance=ExtResource("4_uafcj")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(-210, 162)
shape = SubResource("WorldBoundaryShape2D_2axdh")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Node2D" parent="UI" instance=ExtResource("6_06lwn")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource("7_66u4o")]
process_mode = 3
z_index = 110
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("6_v68fg")

[node name="SingleShark" type="Sprite2D" parent="Player"]
position = Vector2(-250, -120)
scale = Vector2(0.572124, 0.7305)
texture = ExtResource("6_f6x2s")
flip_h = true

[node name="SingleFish" type="Sprite2D" parent="Player"]
position = Vector2(-250, -120)
scale = Vector2(1.70313, 1.71875)
texture = ExtResource("7_1x8mv")

[node name="SinglePenguin" type="Sprite2D" parent="Player"]
position = Vector2(-250, -120)
scale = Vector2(1.65625, 1.32813)
texture = ExtResource("8_4dniu")

[node name="SingleChicken" type="Sprite2D" parent="Player"]
position = Vector2(-250, -120)
scale = Vector2(1.44643, 1.125)
texture = ExtResource("9_3h7xv")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-250, -112)
shape = SubResource("RectangleShape2D_ulaet")

[connection signal="body_entered" from="Quiz Manager/AnswerA" to="Quiz Manager" method="_on_answer_a_body_entered"]
[connection signal="body_entered" from="Quiz Manager/AnswerB" to="Quiz Manager" method="_on_answer_b_body_entered"]
[connection signal="body_entered" from="Quiz Manager/AnswerC" to="Quiz Manager" method="_on_answer_c_body_entered"]
[connection signal="body_entered" from="Quiz Manager/AnswerD" to="Quiz Manager" method="_on_answer_d_body_entered"]
